[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Scripts/intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/BGs/intro.png" type="Texture" id=2]
[ext_resource path="res://BG.gd" type="Script" id=3]
[ext_resource path="res://Assets/BGs/intro - Copy (2).png" type="Texture" id=4]
[ext_resource path="res://Assets/BGs/intro_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/whatever.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/fog.jpg" type="Texture" id=7]
[ext_resource path="res://NPC.gd" type="Script" id=8]
[ext_resource path="res://npc_int.gd" type="Script" id=9]
[ext_resource path="res://Assets/icon.png" type="Texture" id=10]
[ext_resource path="res://Assets/texture.png" type="Texture" id=11]
[ext_resource path="res://addons/SMRT/dialog.gd" type="Script" id=12]
[ext_resource path="res://addons/SMRT/faces/dialog.tres" type="SpriteFrames" id=13]
[ext_resource path="res://addons/SMRT/next_line.png" type="Texture" id=14]
[ext_resource path="res://addons/SMRT/typewriter key 1 sound effect from SFX WORLD HIGH QUALTIY-cq4Ab_FGUv0.wav" type="AudioStream" id=15]
[ext_resource path="res://Templates/face.gd" type="Script" id=16]
[ext_resource path="res://delay.gd" type="Script" id=17]
[ext_resource path="res://Assets/Rain Loop Wide Shot Gentle Wind Heavy (1).ogv" type="VideoStream" id=18]

[sub_resource type="Animation" id=1]
resource_name = "fog"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/fog:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.247059 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.3972, 35.1486 )

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="GDScript" id=4]
script/source = "extends Timer

# artificial delay to prevent dialog spam
func _on_delay_timeout():
	global.int_able = true
	global.in_dialog = false
	pass
"

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Theme" id=6]

[node name="intro" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fog = SubResource( 1 )

[node name="BG" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 673.172, 390.659 )
scale = Vector2( 0.720888, 0.720888 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BG2" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )

[node name="BG3" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 5 )

[node name="transition" type="Sprite" parent="BG"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.99911, 1.99911 )
texture = ExtResource( 6 )

[node name="fog" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -56.0364, -292.997 )
scale = Vector2( 0.866569, 0.866569 )
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="BG"]
playback_speed = 0.5
playback/speed = 0.5

[node name="action_tween" type="Tween" parent="BG"]

[node name="delayed_action" type="Timer" parent="BG"]
one_shot = true

[node name="truck_control" type="Sprite" parent="BG"]
position = Vector2( 26.3074, -17.9294 )
scale = Vector2( 31.6399, 17.4965 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="npc_int" type="Area2D" parent="BG/truck_control"]
script = ExtResource( 9 )
dia_flag = false
dia_id = "truck"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/truck_control/npc_int"]
shape = SubResource( 2 )

[node name="Mouse" type="Area2D" parent="."]
editor/display_folded = true
monitoring = false

[node name="Sprite" type="Sprite" parent="Mouse"]
visible = false
scale = Vector2( 0.450007, 0.437765 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource( 3 )

[node name="delay" type="Timer" parent="Mouse"]
process_mode = 0
wait_time = 0.5
one_shot = true
script = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SMRT" type="NinePatchRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.831373 )
margin_right = 384.0
margin_bottom = 76.0
texture = ExtResource( 11 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 4
script = ExtResource( 12 )
language = "res://Dialogue/one_last_wish.lan"
beep_WAV = null
font_size = 36
face_sprites = ExtResource( 13 )

[node name="nextLine" type="TextureRect" parent="CanvasLayer/SMRT"]
margin_left = 361.0
margin_top = 60.0
margin_right = 377.0
margin_bottom = 76.0
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/SMRT/nextLine"]
anims/idle = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/SMRT"]
stream = ExtResource( 15 )

[node name="face" type="AnimatedSprite" parent="CanvasLayer/SMRT"]
frames = ExtResource( 13 )
centered = false
script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="CanvasLayer/SMRT"]
wait_time = 0.05

[node name="text_display" type="RichTextLabel" parent="CanvasLayer/SMRT"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "HELLO THERE CHILDREN! [b]How are you doing?[/b]"
text = "HELLO THERE CHILDREN! How are you doing?"

[node name="anim" type="AnimationPlayer" parent="CanvasLayer/SMRT"]

[node name="delay" type="Timer" parent="CanvasLayer"]
process_mode = 0
wait_time = 0.5
one_shot = true
script = ExtResource( 17 )

[node name="text_delay" type="Timer" parent="CanvasLayer"]
wait_time = 0.22

[node name="VideoPlayer" type="VideoPlayer" parent="."]
modulate = Color( 1, 1, 1, 0.164706 )
margin_right = 1372.0
margin_bottom = 778.0
audio_track = 1
stream = ExtResource( 18 )
[connection signal="area_entered" from="Mouse" to="." method="interactable"]
[connection signal="area_exited" from="Mouse" to="." method="uninteractable"]
[connection signal="timeout" from="Mouse/delay" to="Mouse/delay" method="_on_delay_timeout"]
[connection signal="dialog_control" from="CanvasLayer/SMRT" to="." method="_on_SMRT_dialog_control"]
[connection signal="timeout" from="CanvasLayer/delay" to="CanvasLayer/delay" method="_on_delay_timeout"]
